# paramin

./: .editorconfig  Cargo.toml  LICENSE.md  OPTIONS.md  README.md  package.json
benches/: measurement_benches.rs
crates/paramin/: Cargo.toml
crates/paramin/src/: ast_utils.rs  lib.rs
crates/paramin/src/transforms/: macros.rs  mod.rs
crates/paramin/src/transforms/confident/: mangle.rs  mod.rs  swc.rs
crates/paramin_benchmarking/: Cargo.toml
crates/paramin_benchmarking/src/: main.rs
initial-benchmark/: README.md  index.js  package.json
src/: ast_utils.rs  codegen.rs  lib.rs  measurement.rs
src/transforms/: macros.rs
src/transforms/confident/: hoist_vars.rs  mangle.rs  mod.rs
