[package]
name = "paramin"
version = "0.1.0"
edition = "2021"

[lib]
# cdylib is the standard from swc plugin new
# rlib is needed for criterion to work
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
codegen-units = 1

[dependencies]
serde = "1"
swc_core = { version = "0.59.*", features = ["ecma_plugin_transform", "ecma_codegen", "ecma_minifier"] }

# .cargo/config defines few alias to build plugin.
# cargo build-wasi generates wasm-wasi32 binary
# cargo build-wasm32 generates wasm32-unknown-unknown binary.

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "measurement_benches"
harness = false